Prepare to use java modules
Add shadowjar support
Add module-info
Add gradle tasks to autopatch jars